ckad_sandervanvugt/initpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-prod
  namespace: production
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
